opam-version: "2.0"
name: "bug_ocaml_gh_action"
version: "0.1"
synopsis: ""
description: """
"""
maintainer: "Kk Shinkai <kkshinkai@gmail.com>"
authors: "Kk Shinkai <kkshinkai@gmail.com>"
license: "MIT"
homepage: "https://github.com/kkshinkai/bug-ocaml-gh-action"
bug-reports: "https://github.com/kkshinkai/bug-ocaml-gh-action/issues"
depends: [
  "ocaml" {>= "4.02.3"}
  "dune" {>= "2.7"}
]
build: [
  ["dune" "build"]
]
